--- a/dates/calendar_date/style.css
+++ b/dates/calendar_date/style.css
@@ -1,18 +1,28 @@
+
+*{
+  margin:0;
+  padding: 0;
+}
+
 body {
-  width: 100%;
-  
-  
+  display: flex;
+}
+
+.main {
+  background-color: grey;
+  width: 40%; 
+  height: 300px;
 }
 
 .container {
   display: flex;
-  background-color: grey;
-  width: 70%; 
-  
+  align-items: center;
+  padding-top: 50px;
 }
 
 .calendar_date {
-  width:10%;
+  
+  width:20%;
   display: flex;
   flex-direction: column;
   background-color:beige;
@@ -25,7 +35,7 @@ body {
 .day_week {
 display: flex;
 background-color: red;
-height: 80px;
+
 border-top-left-radius: 25px;
 border-top-right-radius: 25px;
 color:white;
@@ -37,7 +47,7 @@ justify-content: center;
 
 .date {
   display: flex;
-  height: 40px ;
+  
   font-size: 40px;
   align-items: center;
 justify-content: center;
@@ -46,7 +56,7 @@ justify-content: center;
 
 .month {
   display: flex;
-  height: 40px;
+  
   font-size: 40px;
   align-items: center;
 justify-content: center;
@@ -58,7 +68,7 @@ justify-content: center;
   display:flex;
   padding-bottom: 0;
   background-color: red;
-height: 80px;
+
 border-bottom-left-radius: 25px;
 border-bottom-right-radius: 25px;
 color:white;
@@ -71,4 +81,18 @@ justify-content: center;
 
 .time {
   display: flex;
+  align-items: center;
+justify-content: center;
+margin: 20px;
+font-size: 60px;
+font-weight: bold;
+
+}
+
+.sec_p {
+  font-size: 50px;
+  margin-bottom: 0;
+  
+
+  
 }
